--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
         - go get -t -v ./...
         - go get -v -race ./...
   fast_finish: true
+before_install:
+  - go get github.com/mattn/goveralls
 install:
   - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here (we want it to happen inside script step).
 script:
@@ -17,3 +19,4 @@ script:
   - diff -u <(echo -n) <(gofmt -d -s .)
   - go tool vet .
   - go test -v -race ./...
+  - $HOME/gopath/bin/goveralls -service=travis-ci
