--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,16 @@ matrix:
   include:
     - go: 1.6.3
       script:
-        - go get -t -v ./...
-        - go get -v -race ./...
+        - go get -t -sv ./...
+        - go get -sv -race ./...
   fast_finish: true
 before_install:
   - go get github.com/mattn/goveralls
 install:
-  - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here (we want it to happen inside script step).
+  - # Do nothing. This is needed to prevent default install action "go get -t -sv ./..." from happening here (we want it to happen inside script step).
 script:
-  - go get -t -v ./...
+  - go get -t -sv ./...
   - diff -u <(echo -n) <(gofmt -d -s .)
   - go tool vet .
-  - go test -v -race ./...
+  - go test -sv -race ./...
   - $HOME/gopath/bin/goveralls -service=travis-ci
