Fixed travis.yml bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
   include:
     - go: 1.6.3
       script:
-        - go get -t -sv ./...
+        - go get -t -v ./...
         - go get -sv -race ./...
   fast_finish: true
 before_install:
